manifests/ingress-26.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-1f79"
    labels:
        app: "diaggarw-1f79"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw5849-diaggarw-1f79.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-1f79"
                servicePort: 8080
